.deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entity-api
  namespace: hypermine-development
spec:
  replicas: 1

  selector:
    matchLabels:
      app: entity-api
  template:
    metadata:
      labels:
        app: entity-api
    spec:
      containers:
        - name: entity-api
          image: __GOOGLE_ARTIFACT_URL__/__GOOGLE_PROJECT_ID__/__GOOGLE_ARTIFACT_REPO__/enity-api-service:latest
          imagePullPolicy: Always

          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: __PORT__
---
apiVersion: v1
kind: Service
metadata:
  name: entity-api-service
  namespace: hypermine-development
  annotations:
    cloud.google.com/neg: '{"ingress": true}'

spec:
  type: NodePort
  selector:
    app: entity-api
  ports:
    - port: __PORT__
      targetPort: __PORT__
      protocol: TCP
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-entity
#   namespace: hypermine-development
# spec:
#   replicas: 1

#   selector:
#     matchLabels:
#       app: nginx-entity
#   template:
#     metadata:
#       labels:
#         app: nginx-entity
#     spec:
#       containers:
#         - name: nginx-entity
#           image: __GOOGLE_ARTIFACT_URL__/__GOOGLE_PROJECT_ID__/__GOOGLE_ARTIFACT_REPO__/nginx-entity:latest
#           imagePullPolicy: Always

#           resources:
#             limits:
#               memory: "256m"
#               cpu: "500m"
#           ports:
#             - containerPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-entity-service
#   namespace: hypermine-development
#   annotations:
#     cloud.google.com/neg: '{"ingress": true}'

# spec:
#   type: NodePort
#   selector:
#     app: nginx-entity
#   ports:
#     - port: 8080
#       targetPort: 8080
#       protocol: TCP
