.deploy/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entity-api-test
  namespace: hypermine-development
spec:
  replicas: 1

  selector:
    matchLabels:
      app: entity-api-test
  template:
    metadata:
      labels:
        app: entity-api-test
    spec:
      containers:
      - name: entity-api-test
        image: __GOOGLE_ARTIFACT_URL__/__GOOGLE_PROJECT_ID__/__GOOGLE_ARTIFACT_REPO__/enity-api-test-service:__LATEST_RELEASE_TAG__
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /api/v1/edv/state
            port: 3001
          initialDelaySeconds: 120
          periodSeconds: 30
          failureThreshold: 3

        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
        ports:
        - containerPort: __PORT__
        volumeMounts:
        - name: mongo
          mountPath: "/data"
      volumes:
      - name: mongo
        secret:
          secretName: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: entity-api-test-service
  namespace: hypermine-development
  annotations:
    cloud.google.com/neg: '{"ingress": true}'

spec:
  type: NodePort
  selector:
    app: entity-api-test
  ports:
  - port: __PORT__
    targetPort: __PORT__
    protocol: TCP
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-entity
#   namespace: hypermine-development
# spec:
#   replicas: 1

#   selector:
#     matchLabels:
#       app: nginx-entity
#   template:
#     metadata:
#       labels:
#         app: nginx-entity
#     spec:
#       containers:
#         - name: nginx-entity
#           image: __GOOGLE_ARTIFACT_URL__/__GOOGLE_PROJECT_ID__/__GOOGLE_ARTIFACT_REPO__/nginx-entity:latest
#           imagePullPolicy: Always

#           resources:
#             limits:
#               memory: "256m"
#               cpu: "500m"
#           ports:
#             - containerPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-entity-service
#   namespace: hypermine-development
#   annotations:
#     cloud.google.com/neg: '{"ingress": true}'

# spec:
#   type: NodePort
#   selector:
#     app: nginx-entity
#   ports:
#     - port: 8080
#       targetPort: 8080
#       protocol: TCP
