.deploy/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entity-ingress
  namespace: hypermine-development
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/force-ssl-redirect: redirect
    ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: entity-ip
    cert-manager.io/issuer: letsencrypt-production
  labels:
    name: ingress

spec:
  tls:
  - secretName: entity-ssl
    hosts:
    - "api.entity.hypersign.id"
    - "*.api.entity.hypersign.id"
    - "api.entity-test.hypersign.id"
    - "*.api.entity-test.hypersign.id"

  rules:
  - host: "api.entity.hypersign.id"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: entity-api-service
            port:
              number: 3001
      - path: /ssi/
        pathType: Prefix
        backend:
          service:
            name: entity-api-service
            port:
              number: 3001
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: entity-api-service
            port:
              number: 3001
  - host: "*.api.entity.hypersign.id"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: entity-api-service
            port:
              number: 3001
      - path: /ssi/
        pathType: Prefix
        backend:
          service:
            name: entity-api-service
            port:
              number: 3001
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: entity-api-service
            port:
              number: 3001
  - host: "api.entity-test.hypersign.id"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: entity-api-test-service
            port:
              number: 3001
      - path: /ssi/
        pathType: Prefix
        backend:
          service:
            name: entity-api-test-service
            port:
              number: 3001
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: entity-api-test-service
            port:
              number: 3001
  - host: "*.api.entity-test.hypersign.id"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: entity-api-test-service
            port:
              number: 3001
      - path: /ssi/
        pathType: Prefix
        backend:
          service:
            name: entity-api-test-service
            port:
              number: 3001
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: entity-api-test-service
            port:
              number: 3001
